Separate all graphql queries/mutations into features
Improves compile time a lot for small projects

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,111 @@ authors = ["FoLZer"]
 uuid = { version = "1.1.2", features = ["serde"] }
 serde = "^1.0"
 graphql_client = "0.11.0"
+
+[features]
+AcceptQuest = []
+ActivateSpecialItem = []
+AdminGiveItems = []
+AdminGivePet = []
+AdminLoginAs = []
+AdminSendCustomNotif = []
+AnswerGuildInvite = []
+AnswerTradeOffer = []
+AwardTrophy = []
+BidOnAuctionItem = []
+BuyGigaItem = []
+BuyGigaMatterCheckoutLink = []
+BuyVendorItem = []
+BuyoutAuctionItem = []
+CancelAuctionItem = []
+CancelTrade = []
+ClaimGigaMatter = []
+CreateAvatar = []
+CreateStarter = []
+CreateTrade = []
+CreateTradeOffer = []
+CreateTrophy = []
+DeleteGuild = []
+DeleteMe = []
+DeleteTrophy = []
+DescendCave = []
+DevRandomItem = []
+DevSavePetItemPos = []
+DrinkPotion = []
+EatFoodItem = []
+EditGuild = []
+EvolvePet = []
+FleeBattle = []
+ForceCatchPet = []
+ForgetManyPets = []
+ForgetPet = []
+FormGuild = []
+GenDevPet = []
+GigaCheckoutLink = []
+GigaPortalLink = []
+GiveUpCatching = []
+HealPets = []
+InviteToGuild = []
+LeaveGuild = []
+LinkClick = []
+Logout = []
+NameCaughtPet = []
+PetStorageCheckoutLink = []
+PickUpQuestItem = []
+PlayWithPet = []
+QuestInteraction = []
+ReportUser = []
+SavePetMoves = []
+ScareAwayPet = []
+SellAuctionItem = []
+SendWildBattleSequence = []
+SetGuildRole = []
+StabilizePlasma = []
+StartCatching = []
+StartGuildBattle = []
+StartNpcBattle = []
+StartWildBattle = []
+SwapDeadPet = []
+TakeIceCream = []
+Teleport = []
+ThrowItemAtPet = []
+TryToFriendCatching = []
+TurnInQuest = []
+UpdateAvatar = []
+UpdateMainPets = []
+UpdateMe = []
+UpdateMyLocation = []
+UpdatePet = []
+UpdatePetItems = []
+UpdateRep = []
+UsernameChangeCheckoutLink = []
+DevAllItems = []
+DevGetPetItemMap = []
+DevPets = []
+GetAuctionItems = []
+GetAvatarItems = []
+GetBondLeaderboard = []
+GetDailyQuests = []
+GetGigaStoreItems = []
+GetGuild = []
+GetGuildInvites = []
+GetInventory = []
+GetLinkAnalytics = []
+GetMyLocation = []
+GetNotifs = []
+GetNumUnreadNotifs = []
+GetPet = []
+GetPetItems = []
+GetPetLog = []
+GetPetMoves = []
+GetPets = []
+GetStarterAvatarItems = []
+GetTradeBoxes = []
+GetTradeOffers = []
+GetTrophies = []
+GetUser = []
+GetVendorItems = []
+ItemNameSearch = []
+Me2 = []
+queries = ["DevAllItems","DevGetPetItemMap","DevPets","GetAuctionItems","GetAvatarItems","GetBondLeaderboard","GetDailyQuests","GetGigaStoreItems","GetGuild","GetGuildInvites","GetInventory","GetLinkAnalytics","GetMyLocation","GetNotifs","GetNumUnreadNotifs","GetPet","GetPetItems","GetPetLog","GetPetMoves","GetPets","GetStarterAvatarItems","GetTradeBoxes","GetTradeOffers","GetTrophies","GetUser","GetVendorItems","ItemNameSearch","Me2"]
+mutations = ["AcceptQuest","ActivateSpecialItem","AdminGiveItems","AdminGivePet","AdminLoginAs","AdminSendCustomNotif","AnswerGuildInvite","AnswerTradeOffer","AwardTrophy","BidOnAuctionItem","BuyGigaItem","BuyGigaMatterCheckoutLink","BuyVendorItem","BuyoutAuctionItem","CancelAuctionItem","CancelTrade","ClaimGigaMatter","CreateAvatar","CreateStarter","CreateTrade","CreateTradeOffer","CreateTrophy","DeleteGuild","DeleteMe","DeleteTrophy","DescendCave","DevRandomItem","DevSavePetItemPos","DrinkPotion","EatFoodItem","EditGuild","EvolvePet","FleeBattle","ForceCatchPet","ForgetManyPets","ForgetPet","FormGuild","GenDevPet","GigaCheckoutLink","GigaPortalLink","GiveUpCatching","HealPets","InviteToGuild","LeaveGuild","LinkClick","Logout","NameCaughtPet","PetStorageCheckoutLink","PickUpQuestItem","PlayWithPet","QuestInteraction","ReportUser","SavePetMoves","ScareAwayPet","SellAuctionItem","SendWildBattleSequence","SetGuildRole","StabilizePlasma","StartCatching","StartGuildBattle","StartNpcBattle","StartWildBattle","SwapDeadPet","TakeIceCream","Teleport","ThrowItemAtPet","TryToFriendCatching","TurnInQuest","UpdateAvatar","UpdateMainPets","UpdateMe","UpdateMyLocation","UpdatePet","UpdatePetItems","UpdateRep","UsernameChangeCheckoutLink"]
